# dpu-accel-offload

./: README.txt  meson.build
app/: meson.build
ci/test/dao-test/common/: ep_host_utils.sh
ci/test/env/: cn10k.env
config/: arm64_cn10k_linux_gcc
dep/: meson.build
dep/dpdk/: meson.build
dep/grpc/: meson.build
dep/libnl/: meson.build
lib/: meson.build
lib/netlink/: meson.build
tests/: meson.build
